Fixed some issue on mobile version of the sign in and up page style

--- a/CSS/CustomerSignInUp.css
+++ b/CSS/CustomerSignInUp.css
@@ -202,11 +202,23 @@ body {
     transform: translateX(200%);
 }
 /* Media Query for smaller screens */
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 900px) {
     .container {
       transform: scale(0.6);
       max-width: 100%;
       min-height: 500px;
-      min-width: 700px;
+      min-width: 670px;
     }
     }
+
+    @media only screen and (max-width: 750px) {
+        .container {
+          transform: scale(0.6);
+          max-width: 100%;
+          min-height: 500px;
+          min-width: 600px;
+        }
+        .craeteAccountTitle{
+            transform: scale(0.6);
+        }
+        }
